Fix laptop footer spacing by applying 100px padding in the loaded stylesheets.

--- a/css/styles_old.css
+++ b/css/styles_old.css
@@ -302,7 +302,7 @@ svg {
 .footer {
   background: #f3cf16;
   font-size: 0;
-  padding: 40px 0; }
+  padding: 100px 0; }
 .footer .center {
   font-size: 0;
   letter-spacing: 0; }
@@ -437,7 +437,7 @@ svg {
 }
 @media (min-width: 1440px) {
   .footer {
-    padding: 80px 0 70px; }
+    padding: 100px 0; }
   .footer .center {
     justify-content: space-around; }
   .footer__form {
